[GTK] fails to build with --disable-webgl --disable-accelerated-compositing https://bugs.webkit.org/show_bug.cgi?id=131267

Reviewed by Philippe Normand.

Add missing headers needed for Float32Array::create().

* Modules/webaudio/AudioBuffer.cpp:


Canonical link: https://commits.webkit.org/151779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169896 268f45cc-cd09-0410-ab3c-d52691b4dbfc